# practice-python

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
materials/scikit-learn/metadata-routing/: README.md  metadata-routing-example.ipynb
